--- a/home page.html
+++ b/home page.html
@@ -19,6 +19,8 @@
     <li><a href="projec tpage.html">projec tpage</a></li>
     <li><a href="skill page.html">skill page</a></li>
     <li><a href="contact page.html">info page</a></li>
+    <li><a href="./register.html">Register Page</a></li>
+    <li><a href="./address.html">Address Page</a></li>
  </ul>
 </body>
 </html>
