--- a/skill page.html
+++ b/skill page.html
@@ -16,7 +16,10 @@
         <li>Game Development</li>
     </ul>
     <br>
+    <fieldset>
+        <legend>Information</legend>
    <table>
+   
     <tr>
         <th>Education</th>
         <th>board faculty</th>
@@ -39,7 +42,10 @@
         <td>board of technical</td>
         <td>2022</td>
     </tr>
+
    </table>
+</fieldset>
+   
     <br>
     <ul>
         <li><a href="home page.html">Home page</a></li>
